[package]
name = "rust_regex_explanation_pwa"
version = "2020.804.1526"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "Rust regex explanations in PWA"
repository = "https://github.com/LucianoBestia/rust_regex_explanation_pwa"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = []
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
regex = "1.3.9"
regex-syntax="0.6.18"
unwrap = "1.2.1"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.12"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.39"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSpanElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "Request",
  "RequestCache",
  "RequestInit",
  "RequestMode",
  "Response",
  "Screen",
  "Storage",
  "Window",
]

[profile.release]
panic = "abort"
